--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="13dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="23dp"
-        android:background="#FBFBFB"
+        android:background="@drawable/radius"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/senha"
@@ -56,7 +56,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="294dp"
-        android:background="#FBFBFB"
+        android:background="@drawable/radius"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Senha"
+        android:text="@string/senha"
         android:textColor="#FBFBFB"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,10 +87,9 @@
         android:layout_marginTop="109dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="137dp"
-        android:background="#0E3535"
-        android:backgroundTint="#0E3535"
-        android:backgroundTintMode="add"
-        android:text="Entrar"
+        android:background="@drawable/btn"
+        android:hapticFeedbackEnabled="true"
+        android:text="@string/entrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
