--- a/app/src/main/res/drawable/btn.xml
+++ b/app/src/main/res/drawable/btn.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FBFBFB" />
+    <solid android:color="#0E3535"/>
     <corners android:radius="12dp"/>
     <stroke
         android:width="0dp"
-        android:color="#FBFBFB"/>
+        android:color="#000"/>
 </shape>
