--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -61,8 +61,8 @@
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/senha"
-        app:layout_constraintTop_toBottomOf="@+id/senha" />
+        app:layout_constraintStart_toStartOf="@+id/cpf"
+        app:layout_constraintTop_toBottomOf="@+id/cpf" />
 
     <TextView
         android:id="@+id/senha"
